apps/architecture-portal/versioned_docs/version-1.0.14.0/hosts/web-runtime.mdx
---
title: Web Runtime Host
area: hosts
status: implemented
host: web-runtime-host
owners: [hosts, web, audio]
source_paths:
  - docs/superpowers/specs/2026-08-03-lmdj-formal-web-runtime-host-design.md
  - docs/superpowers/plans/2026-08-03-lmdj-formal-web-runtime-host.md
  - apps/web-runtime-host
  - apps/web-runtime-host/module.json
  - products/lmdj/assembly.json
  - scripts/web-runtime-host.sh
  - docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md
  - tests/platform/web/host/web_runtime_host_manifest_gate.spec.mjs
  - tests/platform/web/host/web_runtime_host_lifecycle.spec.mjs
  - tests/platform/web/host/web_runtime_host_browser.spec.mjs
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {StatusBadge} from '@site/src/components/StatusBadge';

<BuildIdentity />

## 状态

<StatusBadge status="implemented" /> Product Build `1.0.14.0` 已将 Formal Web Runtime Host `1.0.0` 纳入 Product Assembly 与生成的 Assembly Lock。Host 声明只依赖 Application Facade `1.2.0` 与 Audio Runtime `0.4.0`，没有直接 Project I/O 依赖；同构建私有协议仍为 `1`，没有新增公开 Contract。

## 目标边界

Main thread 只负责 manifest/hash 装载门、Window 能力、用户手势、DOM/MIDI 输入、生命周期观察、有界 transport 与终止清理；Dedicated Worker 独立证明 OPFS、SyncAccessHandle 与 writable replacement 能力，Project、OPFS、Facade、解码与混音仍由 Control/Core 边界负责。Pointer、Keyboard、MIDI 汇入唯一 `trigger(flatSlot, velocity)` 路由。

## 分发与身份门禁

`scripts/web-runtime-host.sh build` 原子生成 `build/web/host/dist`：全部分发资产使用内容哈希文件名，canonical `host-manifest.json` 以私有 ownership contract 绑定当前 Product Build、Host `1.0.0`、私有协议 `1`、固定 512 MiB heap、四项资源上限、固定 Emscripten 身份，以及八项生产资产的精确路径、role、正字节数和 SHA-256。Browser Main 在装载 runtime 资产前校验完整形状与 canonical bytes；Control 在创建 proxy queue、OPFS、Facade 或 audio adapter 前独立校验同一有界 manifest。缺失、畸形、超限、任何字段或 inventory 漂移、hash/identity 不匹配、重复或迟到初始化均 fail closed 为 `HOST_PROTOCOL_MISMATCH`；即使真实 bridge 已发布，迟到/重复初始化也会关闭入口并 once-only seal Control runtime。

proof-only server 只暴露指定 dist，设置精确 COOP/COEP/CORP/CSP 与 WASM MIME；仅 index/manifest 使用 `no-store`，内容哈希资产使用 immutable cache。它不是生产发布服务。

## 生命周期门禁

普通 Trigger 与全部 `take.begin` 只在 `running` 接收。中断同步关闭 admission、清除 pressed state，并按 epoch 只发一次 Control suspend/seal。恢复必须同时具备 Context `running`、正整数 current/ack generation 相等，以及一个真实用户 recovery probe 的唯一 `voice_started`；visibility 或 pageshow 本身不能完成恢复。

## 自动化证据

`scripts/web-runtime-host.sh proof` 覆盖两次 clean build 的逐字节可复现性、deterministic inventory、proof-server headers/cache/no-follow ownership、双重 manifest gate，以及 Chromium packaged Main→Control→Facade/OPFS→Wasm AudioWorklet 全旅程。旅程证明 500 个 admission sequence 与 500 个 `voice_started` outcome 精确对应、20+1 Take 边界、重启重开、失败与 lifecycle 路径。WebKit 只在 mandatory primitive 可用时执行完整 smoke；缺少能力时必须输出结构化 limitation。CI 已配置独立 Formal Web Host lane，但在实际 Pull Request CI 出现前不宣称远端结果。

## 非能力

当前不能宣称 Creator Web/PWA 已交付、WebKit automation 等于物理 Safari、MIDI/iPad/延迟体验已完成物理验收，或 `beta`/`stable` 已获准。

## 进入 Assembly 的门禁

Task 12A 已完成 Product/module identity、Assembly/Lock 与 current-page 传播；Task 12B 才能在干净 Task 12A commit 上冻结 `1.0.14.0` canary 快照。五个物理行继续保持：

| 物理行 | 状态 |
| --- | --- |
| macOS Safari Pointer | `deferred / unverified` |
| macOS Chrome Pointer | `deferred / unverified` |
| macOS Chrome physical MIDI | `deferred / unverified` |
| iPadOS Safari Touch | `deferred / unverified` |
| iPadOS Safari lifecycle | `deferred / unverified` |
